--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@types/nodemailer": "^6.4.14",
     "axios": "^1.6.8",
     "cheerio": "^1.0.0-rc.12",
     "mongoose": "^8.3.0",
     "next": "14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
